<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_tools_ros</name>
  <version>0.0.0</version>
  <description>This ROS 2 package is designed to provide tools and utilities for working with AprilTags in ROS-based robotics applications</description>
  <maintainer email="khaledgabr77@gmail.com">Khaled Gabr</maintainer>
  <license>BSD3</license>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
